--- a/src/components/RadioGroup.less
+++ b/src/components/RadioGroup.less
@@ -1,5 +1,5 @@
 @import '../../less/spacing';
 
-.RadioGroup__option:not(:last-child) {
-	margin-bottom: @sp-02;
+.RadioGroup {
+	gap: @sp-08;
 }
